--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "sharp": "^0.33.0",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
@@ -33,6 +34,6 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": "18.10"
+    "node": "18.x"
   }
 }
