--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web5/api": "^0.8.2",
+    "@web5/api": "^0.8.3",
     "axios": "^1.6.2",
     "crypto-browserify": "^3.12.0",
+    "mongoose": "^8.0.3",
     "next": "14.0.3",
     "process": "^0.11.10",
     "randomatic": "^3.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "resend": "^2.1.0-canary.1",
     "sharp": "^0.33.0",
     "stream-browserify": "^3.0.0"
   },
