--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "crypto-browserify": "^3.12.0",
     "mongoose": "^8.0.3",
     "next": "14.0.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-images": "^1.8.5",
+    "next-transpile-modules": "^10.0.1",
     "process": "^0.11.10",
     "randomatic": "^3.1.1",
     "react": "^18",
